[package]
name = "network-service-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.31"
network-service-shared = { path= "../network-service-shared" }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = "1.17.0"
